@@ -1,3 +1,8 @@
+2007-09-06 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoGState.m (-copyWithZone:): Copy dash and clipping.
+	* Source/cairo/CairoGState.m (-_setPath:): Clear the cairo path.
+
 2007-09-05 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/x11/XGGeneric.h: Add ivars for event time keeping.
